--- a/function.html
+++ b/function.html
@@ -131,7 +131,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="copyright">
-								<li>由<strong>Serv00</strong>强力驱动</li><li>All Rights Reserved</li><li>Design: Cube Adventurer Team</li><li>&copy; Cube Adventurer</li><!--   方块冒险家工作室 —— 方块冒险家伺服器管理组-->						</div>
+								<li>由<strong>-</strong>强力驱动</li><li>All Rights Reserved</li><li>Design: Cube Adventurer Team</li><li>&copy; Cube Adventurer</li><!--   方块冒险家工作室 —— 方块冒险家伺服器管理组-->						</div>
 					</footer>
 					</div>
 
