--- a/success.html
+++ b/success.html
@@ -77,7 +77,7 @@
 								<h3>2.进入服务器</h3>
 									<dl>
 										<dd>
-											<p>输入以下任意伺服器地址即可加入。<br>play.fkmxj.us.kg:25566<br>mc.fkmxj.us.kg:25566<br>输入/register [密码] [密码] 注册<br>输入/login [密码] 登入</p>
+											<p>输入以下任意伺服器地址即可加入(服务器进入无赞助商状态，IP地址请到Discord询问服主或运营团队)。<--<br>play.fkmxj.us.kg:25566<br>mc.fkmxj.us.kg:25566<br>输入/register [密码] [密码] 注册<br>输入/login [密码] 登入</p>-->
 										</dd>
 									</dl>
 											
@@ -98,7 +98,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="copyright">
-								<li>由<strong>Serv00</strong>强力驱动</li><li>All Rights Reserved</li><li>Design: Cube Adventurer Team</li><li>&copy; Cube Adventurer</li><!--   方块冒险家工作室 —— 方块冒险家伺服器管理组-->
+								<li>由<strong>-</strong>强力驱动</li><li>All Rights Reserved</li><li>Design: Cube Adventurer Team</li><li>&copy; Cube Adventurer</li><!--   方块冒险家工作室 —— 方块冒险家伺服器管理组-->
 							</ul>
 						</div>
 					</footer>
