--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					        var hour = parseInt(time/3600)-24*day;    
 					        var minute = parseInt(time%3600/60); 
 					        var second = parseInt(time%60); 
-					        obj.innerHTML="方块冒险家已运行"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"(当前服务器进入无赞助商状态，不7x24小时开放)"""
+					        obj.innerHTML="方块冒险家已运行"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"(当前服务器进入无赞助商状态，不7x24小时开放)"+""
 					}
 					</script>
 
