--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									</header>
 									<ul class="alt">
 										<li>搭载跨服聊天，伺服器之间与Discord之间消息互通</li>
-										<li>核心处理器Intel(R) Xeon(R) Silver 4214R CPU，主频可达2.4Ghz</li>
+										<li>核心处理器-主频可达-Ghz</li>
 										<li>可自定义皮肤</li>
 										<li>伺服器内开展小游戏活动</li>
 										<li>定期审核，提供高质量玩家氛围</li>
