--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					        var hour = parseInt(time/3600)-24*day;    
 					        var minute = parseInt(time%3600/60); 
 					        var second = parseInt(time%60); 
-					        obj.innerHTML="方块冒险家已运行"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"(当前服务器进入无赞助商状态，不7x24小时开放)"+""
+					        obj.innerHTML="方块冒险家已成立"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"(当前服务器进入无赞助商状态，不7x24小时开放)"+""
 					}
 					</script>
 
@@ -86,8 +86,8 @@
 										<img src="images/pic01.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="http://mc.fkmxj.us.kg:8123" class="link">卫星云图</a></h3>
-										<p>Server satellite image</p>
+										<h3><a href="http://mc.fkmxj.us.kg:8123" class="link">卫星云图 当前不可用</a></h3>
+										<p>Server satellite image UNAVAILABLE</p>
 									</header>
 								</article>
 								<article>
@@ -105,7 +105,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="function.html" class="link">便捷功能</a></h3>
-										<p>Magical balara power</p>
+										<p>Useful magic power</p>
 									</header>
 								</article>
 								<article>
@@ -113,8 +113,8 @@
 										<img src="./images/pic07.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="list-final.html" class="link">肝帝榜单</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="list-final.html" class="link">肝帝榜单 当前不可用</a></h3>
+										<p>No need to sleep UNAVAILABLE</p>
 									</header>
 								</article>
 								<article>
@@ -123,7 +123,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="team.html" class="link">方块冒险家 团队</a></h3>
-										<p>Cube Adventurer Team</p>
+										<p>FKMXJ Team</p>
 									</header>
 								</article>
 							</section>
@@ -136,13 +136,13 @@
 									</header>
 									<ul class="alt">
 										<li>搭载跨服聊天，伺服器之间与Discord之间消息互通</li>
-										<li>核心处理器-主频可达-Ghz</li>
+										<li>核心处理器-主频可达-Ghz 等你赞助O_O</li>
 										<li>可自定义皮肤</li>
 										<li>伺服器内开展小游戏活动</li>
 										<li>定期审核，提供高质量玩家氛围</li>
 									</ul>
 									<ul class="actions">
-										<li><a href="join_request.html" class="button next">加入Cube Adventurer方块冒险家</a></li>
+										<li><a href="join_request.html" class="button next">加入FKMXJ方块冒险家</a></li>
 									</ul>
 								</div>
 							</section>
